--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\Cristian\\AppData\\Roaming\\NetBeans\\8.0.1\\config\\GlassFishEE6\\Properties\\gfv31604627742.properties
+deploy.ant.properties.file=C:\\Users\\AnDreiTa\\AppData\\Roaming\\NetBeans\\8.0.2\\config\\GlassFishEE6\\Properties\\gfv3-174973907.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/Cristian/GlassFish_Server/glassfish/domains/domain2
-j2ee.server.home=C:/Users/Cristian/GlassFish_Server/glassfish
-j2ee.server.instance=[C:\\Users\\Cristian\\GlassFish_Server\\glassfish;C:\\Users\\Cristian\\GlassFish_Server\\glassfish\\domains\\domain2]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Users/Cristian/GlassFish_Server
-selected.browser=SL[/Browsers/FirefoxBrowser
-user.properties.file=C:\\Users\\Cristian\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
+j2ee.server.domain=C:/Users/AnDreiTa/GlassFish_Server/glassfish/domains/domain2
+j2ee.server.home=C:/Users/AnDreiTa/GlassFish_Server/glassfish
+j2ee.server.instance=[C:\\Users\\AnDreiTa\\GlassFish_Server\\glassfish;C:\\Users\\AnDreiTa\\GlassFish_Server\\glassfish\\domains\\domain2]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Users/AnDreiTa/GlassFish_Server
+user.properties.file=C:\\Users\\AnDreiTa\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
